[package]
name = "kingtime"
version = "0.0.3"
authors = ["Yuichi Nishiwaki <yuichi.nishiwaki@icloud.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust binding for KING OF TIME developer API"
repository = "https://github.com/Idein/kingtime-rs"
documentation = "https://docs.rs/kingtime"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", features = ["executor"] }
reqwest = { version = "0.11", default_features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
